tests/baselines/reference/contextuallyTypedStringLiteralsInJsxAttributes01.errors.txt
tests/cases/conformance/types/contextualTypes/jsxAttributes/contextuallyTypedStringLiteralsInJsxAttributes01.tsx(15,15): error TS2326: Types of property 'foo' are incompatible.
  Type '"f"' is not assignable to type '"A" | "B" | "C"'.
tests/cases/conformance/types/contextualTypes/jsxAttributes/contextuallyTypedStringLiteralsInJsxAttributes01.tsx(16,15): error TS2326: Types of property 'foo' are incompatible.
  Type '"f"' is not assignable to type '"A" | "B" | "C"'.


==== tests/cases/conformance/types/contextualTypes/jsxAttributes/contextuallyTypedStringLiteralsInJsxAttributes01.tsx (2 errors) ====
    namespace JSX {
        export interface IntrinsicElements {
            span: {};
        }
        export interface Element {
    		something?: any;
        }
    }
    
    const FooComponent = (props: { foo: "A" | "B" | "C" }) => <span>{props.foo}</span>;
    
    <FooComponent foo={"A"} />;
    <FooComponent foo="A"   />;
    
    <FooComponent foo={"f"} />;
                  ~~~~~~~~~
!!! error TS2326: Types of property 'foo' are incompatible.
!!! error TS2326:   Type '"f"' is not assignable to type '"A" | "B" | "C"'.
    <FooComponent foo="f"   />;
                  ~~~~~~~
!!! error TS2326: Types of property 'foo' are incompatible.
!!! error TS2326:   Type '"f"' is not assignable to type '"A" | "B" | "C"'.